gcc/cp/

2007-09-25  Simon Martin  <simartin@users.sourceforge.net>
        
	PR c++/33207
	* name-lookup.c (pushtag): Do not create an implicit typedef before
	the associated type declaration is known to be valid.

gcc/testsuite/

2007-09-25  Simon Martin  <simartin@users.sourceforge.net>

	PR c++/33207
	* g++.dg/parse/crash38.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@128769 138bc75d-0d04-0410-961f-82ee72b054a4